Cards and game changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Publications from '../components/Publications.astro';
 import Achievements from '../components/Achievements.astro';
 import Skills from '../components/Skills.astro';
 import Contact from '../components/Contact.astro';
+import Games from '../components/Games.astro';
 ---
 
 <Layout title="Jaishriram PM - Portfolio">
@@ -19,4 +20,5 @@ import Contact from '../components/Contact.astro';
 	<Achievements />
 	<Skills />
 	<Contact />
+	<Games />
 </Layout>
